# officelens

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/officelens/: __init__.py  analyzers.py  cli.py  converters.py  parsers.py
tests/: conftest.py  test_analyzers.py  test_cli.py  test_converters.py  test_parsers.py
