[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "officelens"
version = "0.1.0"
description = "Office Document Analysis & Conversion Toolkit — parse, extract, convert, and analyze DOCX, XLSX, and PPTX files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "EdgarOrtegaRamirez" }]
keywords = ["office", "docx", "xlsx", "pptx", "document", "converter", "extractor", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
    "Topic :: Office/Business",
]
dependencies = [
    "click>=8.1,<9",
    "rich>=13.0,<16",
    "python-docx>=1.1,<2",
    "openpyxl>=3.1,<4",
    "python-pptx>=0.6.23,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.5,<1",
]

[project.scripts]
officelens = "officelens.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
